--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ section#services h1 {
 
 .service {
   background: #fff;
+  margin-top: 20px;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
